force-app/main/default/objects/Construction_Activity_Project__mdt/Construction_Activity_Project__mdt.object-meta.xml
<CustomObject>
    <label>Construction Activity Project</label>
    <pluralLabel>Construction Activities Project</pluralLabel>
</CustomObject>