force-app/main/default/objects/Construction_Activity_Project__mdt/fields/ActivityID__c.field-meta.xml
<CustomField>
    <fullName>ActivityID__c</fullName>
    <label>ActivityID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>