force-app/main/default/objects/Construction_Activity_Project__mdt/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>ActivityType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>