force-app/main/default/objects/Construction_Activity_Project__mdt/fields/ExpenditureDate__c.field-meta.xml
<CustomField>
    <fullName>ExpenditureDate__c</fullName>
    <label>ExpenditureDate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>