force-app/main/default/objects/Construction_Activity_Project__mdt/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>