force-app/main/default/objects/Construction_Activity_Project__mdt/fields/ParentActivityId__c.field-meta.xml
<CustomField>
    <fullName>ParentActivityId__c</fullName>
    <label>ParentActivityId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>