force-app/main/default/objects/Construction_Activity_Project__mdt/fields/PersonResponsible__c.field-meta.xml
<CustomField>
    <fullName>PersonResponsible__c</fullName>
    <label>PersonResponsible</label>
    <length>80</length>
    <type>Text</type>
</CustomField>