force-app/main/default/objects/Construction_Activity_Project__mdt/fields/PersonsInvolved__c.field-meta.xml
<CustomField>
    <fullName>PersonsInvolved__c</fullName>
    <label>PersonsInvolved</label>
    <length>80</length>
    <type>Text</type>
</CustomField>