force-app/main/default/objects/Construction_Activity_Project__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>